--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
 xcodeproj=./iosApp
 android.useAndroidX=true
+sqlDelightVersion=1.4.2
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
